parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt stmt_list
Rule 3     stmt_list -> stmt
Rule 4     stmt -> CLASS ID COLON block
Rule 5     stmt -> DEF method_name LPAREN param_list RPAREN COLON block
Rule 6     stmt -> ID attr_chain id_stmt_tail
Rule 7     stmt -> RETURN expr
Rule 8     stmt -> RETURN
Rule 9     stmt -> PASS
Rule 10    id_stmt_tail -> EQUALS expr
Rule 11    id_stmt_tail -> <empty>
Rule 12    method_name -> ID
Rule 13    method_name -> INIT
Rule 14    param_list -> <empty>
Rule 15    param_list -> SELF
Rule 16    param_list -> SELF COMMA params
Rule 17    param_list -> params
Rule 18    params -> ID COMMA params
Rule 19    params -> ID
Rule 20    expr -> term binary_op term
Rule 21    expr -> term
Rule 22    term -> ID attr_chain
Rule 23    term -> NUMBER
Rule 24    term -> STRING
Rule 25    term -> LPAREN expr RPAREN
Rule 26    binary_op -> PLUS
Rule 27    binary_op -> MINUS
Rule 28    binary_op -> MUL
Rule 29    binary_op -> DIV
Rule 30    attr_chain -> <empty>
Rule 31    attr_chain -> DOT ID attr_chain
Rule 32    attr_chain -> LPAREN arg_list RPAREN attr_chain
Rule 33    arg_list -> <empty>
Rule 34    arg_list -> expr COMMA arg_list
Rule 35    arg_list -> expr
Rule 36    block -> NEWLINE INDENT stmt_list DEDENT

Terminals, with rules where they appear

CLASS                : 4
COLON                : 4 5
COMMA                : 16 18 34
DEDENT               : 36
DEF                  : 5
DIV                  : 29
DOT                  : 31
EQUALS               : 10
ID                   : 4 6 12 18 19 22 31
INDENT               : 36
INIT                 : 13
LPAREN               : 5 25 32
MINUS                : 27
MUL                  : 28
NEWLINE              : 36
NUMBER               : 23
PASS                 : 9
PLUS                 : 26
RETURN               : 7 8
RPAREN               : 5 25 32
SELF                 : 15 16
STRING               : 24
error                : 

Nonterminals, with rules where they appear

arg_list             : 32 34
attr_chain           : 6 22 31 32
binary_op            : 20
block                : 4 5
expr                 : 7 10 25 34 35
id_stmt_tail         : 6
method_name          : 5
param_list           : 5
params               : 16 17 18
program              : 0
stmt                 : 2 3
stmt_list            : 1 2 36
term                 : 20 20 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . CLASS ID COLON block
    (5) stmt -> . DEF method_name LPAREN param_list RPAREN COLON block
    (6) stmt -> . ID attr_chain id_stmt_tail
    (7) stmt -> . RETURN expr
    (8) stmt -> . RETURN
    (9) stmt -> . PASS

    CLASS           shift and go to state 4
    DEF             shift and go to state 6
    ID              shift and go to state 5
    RETURN          shift and go to state 7
    PASS            shift and go to state 8

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2
    stmt                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list .

    $end            reduce using rule 1 (program -> stmt_list .)


state 3

    (2) stmt_list -> stmt . stmt_list
    (3) stmt_list -> stmt .
    (2) stmt_list -> . stmt stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . CLASS ID COLON block
    (5) stmt -> . DEF method_name LPAREN param_list RPAREN COLON block
    (6) stmt -> . ID attr_chain id_stmt_tail
    (7) stmt -> . RETURN expr
    (8) stmt -> . RETURN
    (9) stmt -> . PASS

    $end            reduce using rule 3 (stmt_list -> stmt .)
    DEDENT          reduce using rule 3 (stmt_list -> stmt .)
    CLASS           shift and go to state 4
    DEF             shift and go to state 6
    ID              shift and go to state 5
    RETURN          shift and go to state 7
    PASS            shift and go to state 8

    stmt                           shift and go to state 3
    stmt_list                      shift and go to state 9

state 4

    (4) stmt -> CLASS . ID COLON block

    ID              shift and go to state 10


state 5

    (6) stmt -> ID . attr_chain id_stmt_tail
    (30) attr_chain -> .
    (31) attr_chain -> . DOT ID attr_chain
    (32) attr_chain -> . LPAREN arg_list RPAREN attr_chain

    EQUALS          reduce using rule 30 (attr_chain -> .)
    CLASS           reduce using rule 30 (attr_chain -> .)
    DEF             reduce using rule 30 (attr_chain -> .)
    ID              reduce using rule 30 (attr_chain -> .)
    RETURN          reduce using rule 30 (attr_chain -> .)
    PASS            reduce using rule 30 (attr_chain -> .)
    $end            reduce using rule 30 (attr_chain -> .)
    DEDENT          reduce using rule 30 (attr_chain -> .)
    DOT             shift and go to state 12
    LPAREN          shift and go to state 13

    attr_chain                     shift and go to state 11

state 6

    (5) stmt -> DEF . method_name LPAREN param_list RPAREN COLON block
    (12) method_name -> . ID
    (13) method_name -> . INIT

    ID              shift and go to state 15
    INIT            shift and go to state 16

    method_name                    shift and go to state 14

state 7

    (7) stmt -> RETURN . expr
    (8) stmt -> RETURN .
    (20) expr -> . term binary_op term
    (21) expr -> . term
    (22) term -> . ID attr_chain
    (23) term -> . NUMBER
    (24) term -> . STRING
    (25) term -> . LPAREN expr RPAREN

  ! shift/reduce conflict for ID resolved as shift
    CLASS           reduce using rule 8 (stmt -> RETURN .)
    DEF             reduce using rule 8 (stmt -> RETURN .)
    RETURN          reduce using rule 8 (stmt -> RETURN .)
    PASS            reduce using rule 8 (stmt -> RETURN .)
    $end            reduce using rule 8 (stmt -> RETURN .)
    DEDENT          reduce using rule 8 (stmt -> RETURN .)
    ID              shift and go to state 19
    NUMBER          shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

  ! ID              [ reduce using rule 8 (stmt -> RETURN .) ]

    expr                           shift and go to state 17
    term                           shift and go to state 18

state 8

    (9) stmt -> PASS .

    CLASS           reduce using rule 9 (stmt -> PASS .)
    DEF             reduce using rule 9 (stmt -> PASS .)
    ID              reduce using rule 9 (stmt -> PASS .)
    RETURN          reduce using rule 9 (stmt -> PASS .)
    PASS            reduce using rule 9 (stmt -> PASS .)
    $end            reduce using rule 9 (stmt -> PASS .)
    DEDENT          reduce using rule 9 (stmt -> PASS .)


state 9

    (2) stmt_list -> stmt stmt_list .

    $end            reduce using rule 2 (stmt_list -> stmt stmt_list .)
    DEDENT          reduce using rule 2 (stmt_list -> stmt stmt_list .)


state 10

    (4) stmt -> CLASS ID . COLON block

    COLON           shift and go to state 23


state 11

    (6) stmt -> ID attr_chain . id_stmt_tail
    (10) id_stmt_tail -> . EQUALS expr
    (11) id_stmt_tail -> .

    EQUALS          shift and go to state 25
    CLASS           reduce using rule 11 (id_stmt_tail -> .)
    DEF             reduce using rule 11 (id_stmt_tail -> .)
    ID              reduce using rule 11 (id_stmt_tail -> .)
    RETURN          reduce using rule 11 (id_stmt_tail -> .)
    PASS            reduce using rule 11 (id_stmt_tail -> .)
    $end            reduce using rule 11 (id_stmt_tail -> .)
    DEDENT          reduce using rule 11 (id_stmt_tail -> .)

    id_stmt_tail                   shift and go to state 24

state 12

    (31) attr_chain -> DOT . ID attr_chain

    ID              shift and go to state 26


state 13

    (32) attr_chain -> LPAREN . arg_list RPAREN attr_chain
    (33) arg_list -> .
    (34) arg_list -> . expr COMMA arg_list
    (35) arg_list -> . expr
    (20) expr -> . term binary_op term
    (21) expr -> . term
    (22) term -> . ID attr_chain
    (23) term -> . NUMBER
    (24) term -> . STRING
    (25) term -> . LPAREN expr RPAREN

    RPAREN          reduce using rule 33 (arg_list -> .)
    ID              shift and go to state 19
    NUMBER          shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    arg_list                       shift and go to state 27
    expr                           shift and go to state 28
    term                           shift and go to state 18

state 14

    (5) stmt -> DEF method_name . LPAREN param_list RPAREN COLON block

    LPAREN          shift and go to state 29


state 15

    (12) method_name -> ID .

    LPAREN          reduce using rule 12 (method_name -> ID .)


state 16

    (13) method_name -> INIT .

    LPAREN          reduce using rule 13 (method_name -> INIT .)


state 17

    (7) stmt -> RETURN expr .

    CLASS           reduce using rule 7 (stmt -> RETURN expr .)
    DEF             reduce using rule 7 (stmt -> RETURN expr .)
    ID              reduce using rule 7 (stmt -> RETURN expr .)
    RETURN          reduce using rule 7 (stmt -> RETURN expr .)
    PASS            reduce using rule 7 (stmt -> RETURN expr .)
    $end            reduce using rule 7 (stmt -> RETURN expr .)
    DEDENT          reduce using rule 7 (stmt -> RETURN expr .)


state 18

    (20) expr -> term . binary_op term
    (21) expr -> term .
    (26) binary_op -> . PLUS
    (27) binary_op -> . MINUS
    (28) binary_op -> . MUL
    (29) binary_op -> . DIV

    CLASS           reduce using rule 21 (expr -> term .)
    DEF             reduce using rule 21 (expr -> term .)
    ID              reduce using rule 21 (expr -> term .)
    RETURN          reduce using rule 21 (expr -> term .)
    PASS            reduce using rule 21 (expr -> term .)
    $end            reduce using rule 21 (expr -> term .)
    DEDENT          reduce using rule 21 (expr -> term .)
    COMMA           reduce using rule 21 (expr -> term .)
    RPAREN          reduce using rule 21 (expr -> term .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34

    binary_op                      shift and go to state 30

state 19

    (22) term -> ID . attr_chain
    (30) attr_chain -> .
    (31) attr_chain -> . DOT ID attr_chain
    (32) attr_chain -> . LPAREN arg_list RPAREN attr_chain

    PLUS            reduce using rule 30 (attr_chain -> .)
    MINUS           reduce using rule 30 (attr_chain -> .)
    MUL             reduce using rule 30 (attr_chain -> .)
    DIV             reduce using rule 30 (attr_chain -> .)
    CLASS           reduce using rule 30 (attr_chain -> .)
    DEF             reduce using rule 30 (attr_chain -> .)
    ID              reduce using rule 30 (attr_chain -> .)
    RETURN          reduce using rule 30 (attr_chain -> .)
    PASS            reduce using rule 30 (attr_chain -> .)
    $end            reduce using rule 30 (attr_chain -> .)
    DEDENT          reduce using rule 30 (attr_chain -> .)
    COMMA           reduce using rule 30 (attr_chain -> .)
    RPAREN          reduce using rule 30 (attr_chain -> .)
    DOT             shift and go to state 12
    LPAREN          shift and go to state 13

    attr_chain                     shift and go to state 35

state 20

    (23) term -> NUMBER .

    PLUS            reduce using rule 23 (term -> NUMBER .)
    MINUS           reduce using rule 23 (term -> NUMBER .)
    MUL             reduce using rule 23 (term -> NUMBER .)
    DIV             reduce using rule 23 (term -> NUMBER .)
    CLASS           reduce using rule 23 (term -> NUMBER .)
    DEF             reduce using rule 23 (term -> NUMBER .)
    ID              reduce using rule 23 (term -> NUMBER .)
    RETURN          reduce using rule 23 (term -> NUMBER .)
    PASS            reduce using rule 23 (term -> NUMBER .)
    $end            reduce using rule 23 (term -> NUMBER .)
    DEDENT          reduce using rule 23 (term -> NUMBER .)
    COMMA           reduce using rule 23 (term -> NUMBER .)
    RPAREN          reduce using rule 23 (term -> NUMBER .)


state 21

    (24) term -> STRING .

    PLUS            reduce using rule 24 (term -> STRING .)
    MINUS           reduce using rule 24 (term -> STRING .)
    MUL             reduce using rule 24 (term -> STRING .)
    DIV             reduce using rule 24 (term -> STRING .)
    CLASS           reduce using rule 24 (term -> STRING .)
    DEF             reduce using rule 24 (term -> STRING .)
    ID              reduce using rule 24 (term -> STRING .)
    RETURN          reduce using rule 24 (term -> STRING .)
    PASS            reduce using rule 24 (term -> STRING .)
    $end            reduce using rule 24 (term -> STRING .)
    DEDENT          reduce using rule 24 (term -> STRING .)
    COMMA           reduce using rule 24 (term -> STRING .)
    RPAREN          reduce using rule 24 (term -> STRING .)


state 22

    (25) term -> LPAREN . expr RPAREN
    (20) expr -> . term binary_op term
    (21) expr -> . term
    (22) term -> . ID attr_chain
    (23) term -> . NUMBER
    (24) term -> . STRING
    (25) term -> . LPAREN expr RPAREN

    ID              shift and go to state 19
    NUMBER          shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 36
    term                           shift and go to state 18

state 23

    (4) stmt -> CLASS ID COLON . block
    (36) block -> . NEWLINE INDENT stmt_list DEDENT

    NEWLINE         shift and go to state 38

    block                          shift and go to state 37

state 24

    (6) stmt -> ID attr_chain id_stmt_tail .

    CLASS           reduce using rule 6 (stmt -> ID attr_chain id_stmt_tail .)
    DEF             reduce using rule 6 (stmt -> ID attr_chain id_stmt_tail .)
    ID              reduce using rule 6 (stmt -> ID attr_chain id_stmt_tail .)
    RETURN          reduce using rule 6 (stmt -> ID attr_chain id_stmt_tail .)
    PASS            reduce using rule 6 (stmt -> ID attr_chain id_stmt_tail .)
    $end            reduce using rule 6 (stmt -> ID attr_chain id_stmt_tail .)
    DEDENT          reduce using rule 6 (stmt -> ID attr_chain id_stmt_tail .)


state 25

    (10) id_stmt_tail -> EQUALS . expr
    (20) expr -> . term binary_op term
    (21) expr -> . term
    (22) term -> . ID attr_chain
    (23) term -> . NUMBER
    (24) term -> . STRING
    (25) term -> . LPAREN expr RPAREN

    ID              shift and go to state 19
    NUMBER          shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 39
    term                           shift and go to state 18

state 26

    (31) attr_chain -> DOT ID . attr_chain
    (30) attr_chain -> .
    (31) attr_chain -> . DOT ID attr_chain
    (32) attr_chain -> . LPAREN arg_list RPAREN attr_chain

    EQUALS          reduce using rule 30 (attr_chain -> .)
    CLASS           reduce using rule 30 (attr_chain -> .)
    DEF             reduce using rule 30 (attr_chain -> .)
    ID              reduce using rule 30 (attr_chain -> .)
    RETURN          reduce using rule 30 (attr_chain -> .)
    PASS            reduce using rule 30 (attr_chain -> .)
    $end            reduce using rule 30 (attr_chain -> .)
    DEDENT          reduce using rule 30 (attr_chain -> .)
    PLUS            reduce using rule 30 (attr_chain -> .)
    MINUS           reduce using rule 30 (attr_chain -> .)
    MUL             reduce using rule 30 (attr_chain -> .)
    DIV             reduce using rule 30 (attr_chain -> .)
    COMMA           reduce using rule 30 (attr_chain -> .)
    RPAREN          reduce using rule 30 (attr_chain -> .)
    DOT             shift and go to state 12
    LPAREN          shift and go to state 13

    attr_chain                     shift and go to state 40

state 27

    (32) attr_chain -> LPAREN arg_list . RPAREN attr_chain

    RPAREN          shift and go to state 41


state 28

    (34) arg_list -> expr . COMMA arg_list
    (35) arg_list -> expr .

    COMMA           shift and go to state 42
    RPAREN          reduce using rule 35 (arg_list -> expr .)


state 29

    (5) stmt -> DEF method_name LPAREN . param_list RPAREN COLON block
    (14) param_list -> .
    (15) param_list -> . SELF
    (16) param_list -> . SELF COMMA params
    (17) param_list -> . params
    (18) params -> . ID COMMA params
    (19) params -> . ID

    RPAREN          reduce using rule 14 (param_list -> .)
    SELF            shift and go to state 44
    ID              shift and go to state 46

    param_list                     shift and go to state 43
    params                         shift and go to state 45

state 30

    (20) expr -> term binary_op . term
    (22) term -> . ID attr_chain
    (23) term -> . NUMBER
    (24) term -> . STRING
    (25) term -> . LPAREN expr RPAREN

    ID              shift and go to state 19
    NUMBER          shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    term                           shift and go to state 47

state 31

    (26) binary_op -> PLUS .

    ID              reduce using rule 26 (binary_op -> PLUS .)
    NUMBER          reduce using rule 26 (binary_op -> PLUS .)
    STRING          reduce using rule 26 (binary_op -> PLUS .)
    LPAREN          reduce using rule 26 (binary_op -> PLUS .)


state 32

    (27) binary_op -> MINUS .

    ID              reduce using rule 27 (binary_op -> MINUS .)
    NUMBER          reduce using rule 27 (binary_op -> MINUS .)
    STRING          reduce using rule 27 (binary_op -> MINUS .)
    LPAREN          reduce using rule 27 (binary_op -> MINUS .)


state 33

    (28) binary_op -> MUL .

    ID              reduce using rule 28 (binary_op -> MUL .)
    NUMBER          reduce using rule 28 (binary_op -> MUL .)
    STRING          reduce using rule 28 (binary_op -> MUL .)
    LPAREN          reduce using rule 28 (binary_op -> MUL .)


state 34

    (29) binary_op -> DIV .

    ID              reduce using rule 29 (binary_op -> DIV .)
    NUMBER          reduce using rule 29 (binary_op -> DIV .)
    STRING          reduce using rule 29 (binary_op -> DIV .)
    LPAREN          reduce using rule 29 (binary_op -> DIV .)


state 35

    (22) term -> ID attr_chain .

    PLUS            reduce using rule 22 (term -> ID attr_chain .)
    MINUS           reduce using rule 22 (term -> ID attr_chain .)
    MUL             reduce using rule 22 (term -> ID attr_chain .)
    DIV             reduce using rule 22 (term -> ID attr_chain .)
    CLASS           reduce using rule 22 (term -> ID attr_chain .)
    DEF             reduce using rule 22 (term -> ID attr_chain .)
    ID              reduce using rule 22 (term -> ID attr_chain .)
    RETURN          reduce using rule 22 (term -> ID attr_chain .)
    PASS            reduce using rule 22 (term -> ID attr_chain .)
    $end            reduce using rule 22 (term -> ID attr_chain .)
    DEDENT          reduce using rule 22 (term -> ID attr_chain .)
    COMMA           reduce using rule 22 (term -> ID attr_chain .)
    RPAREN          reduce using rule 22 (term -> ID attr_chain .)


state 36

    (25) term -> LPAREN expr . RPAREN

    RPAREN          shift and go to state 48


state 37

    (4) stmt -> CLASS ID COLON block .

    CLASS           reduce using rule 4 (stmt -> CLASS ID COLON block .)
    DEF             reduce using rule 4 (stmt -> CLASS ID COLON block .)
    ID              reduce using rule 4 (stmt -> CLASS ID COLON block .)
    RETURN          reduce using rule 4 (stmt -> CLASS ID COLON block .)
    PASS            reduce using rule 4 (stmt -> CLASS ID COLON block .)
    $end            reduce using rule 4 (stmt -> CLASS ID COLON block .)
    DEDENT          reduce using rule 4 (stmt -> CLASS ID COLON block .)


state 38

    (36) block -> NEWLINE . INDENT stmt_list DEDENT

    INDENT          shift and go to state 49


state 39

    (10) id_stmt_tail -> EQUALS expr .

    CLASS           reduce using rule 10 (id_stmt_tail -> EQUALS expr .)
    DEF             reduce using rule 10 (id_stmt_tail -> EQUALS expr .)
    ID              reduce using rule 10 (id_stmt_tail -> EQUALS expr .)
    RETURN          reduce using rule 10 (id_stmt_tail -> EQUALS expr .)
    PASS            reduce using rule 10 (id_stmt_tail -> EQUALS expr .)
    $end            reduce using rule 10 (id_stmt_tail -> EQUALS expr .)
    DEDENT          reduce using rule 10 (id_stmt_tail -> EQUALS expr .)


state 40

    (31) attr_chain -> DOT ID attr_chain .

    EQUALS          reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    CLASS           reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    DEF             reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    ID              reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    RETURN          reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    PASS            reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    $end            reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    DEDENT          reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    PLUS            reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    MINUS           reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    MUL             reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    DIV             reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    COMMA           reduce using rule 31 (attr_chain -> DOT ID attr_chain .)
    RPAREN          reduce using rule 31 (attr_chain -> DOT ID attr_chain .)


state 41

    (32) attr_chain -> LPAREN arg_list RPAREN . attr_chain
    (30) attr_chain -> .
    (31) attr_chain -> . DOT ID attr_chain
    (32) attr_chain -> . LPAREN arg_list RPAREN attr_chain

    EQUALS          reduce using rule 30 (attr_chain -> .)
    CLASS           reduce using rule 30 (attr_chain -> .)
    DEF             reduce using rule 30 (attr_chain -> .)
    ID              reduce using rule 30 (attr_chain -> .)
    RETURN          reduce using rule 30 (attr_chain -> .)
    PASS            reduce using rule 30 (attr_chain -> .)
    $end            reduce using rule 30 (attr_chain -> .)
    DEDENT          reduce using rule 30 (attr_chain -> .)
    PLUS            reduce using rule 30 (attr_chain -> .)
    MINUS           reduce using rule 30 (attr_chain -> .)
    MUL             reduce using rule 30 (attr_chain -> .)
    DIV             reduce using rule 30 (attr_chain -> .)
    COMMA           reduce using rule 30 (attr_chain -> .)
    RPAREN          reduce using rule 30 (attr_chain -> .)
    DOT             shift and go to state 12
    LPAREN          shift and go to state 13

    attr_chain                     shift and go to state 50

state 42

    (34) arg_list -> expr COMMA . arg_list
    (33) arg_list -> .
    (34) arg_list -> . expr COMMA arg_list
    (35) arg_list -> . expr
    (20) expr -> . term binary_op term
    (21) expr -> . term
    (22) term -> . ID attr_chain
    (23) term -> . NUMBER
    (24) term -> . STRING
    (25) term -> . LPAREN expr RPAREN

    RPAREN          reduce using rule 33 (arg_list -> .)
    ID              shift and go to state 19
    NUMBER          shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 28
    arg_list                       shift and go to state 51
    term                           shift and go to state 18

state 43

    (5) stmt -> DEF method_name LPAREN param_list . RPAREN COLON block

    RPAREN          shift and go to state 52


state 44

    (15) param_list -> SELF .
    (16) param_list -> SELF . COMMA params

    RPAREN          reduce using rule 15 (param_list -> SELF .)
    COMMA           shift and go to state 53


state 45

    (17) param_list -> params .

    RPAREN          reduce using rule 17 (param_list -> params .)


state 46

    (18) params -> ID . COMMA params
    (19) params -> ID .

    COMMA           shift and go to state 54
    RPAREN          reduce using rule 19 (params -> ID .)


state 47

    (20) expr -> term binary_op term .

    CLASS           reduce using rule 20 (expr -> term binary_op term .)
    DEF             reduce using rule 20 (expr -> term binary_op term .)
    ID              reduce using rule 20 (expr -> term binary_op term .)
    RETURN          reduce using rule 20 (expr -> term binary_op term .)
    PASS            reduce using rule 20 (expr -> term binary_op term .)
    $end            reduce using rule 20 (expr -> term binary_op term .)
    DEDENT          reduce using rule 20 (expr -> term binary_op term .)
    COMMA           reduce using rule 20 (expr -> term binary_op term .)
    RPAREN          reduce using rule 20 (expr -> term binary_op term .)


state 48

    (25) term -> LPAREN expr RPAREN .

    PLUS            reduce using rule 25 (term -> LPAREN expr RPAREN .)
    MINUS           reduce using rule 25 (term -> LPAREN expr RPAREN .)
    MUL             reduce using rule 25 (term -> LPAREN expr RPAREN .)
    DIV             reduce using rule 25 (term -> LPAREN expr RPAREN .)
    CLASS           reduce using rule 25 (term -> LPAREN expr RPAREN .)
    DEF             reduce using rule 25 (term -> LPAREN expr RPAREN .)
    ID              reduce using rule 25 (term -> LPAREN expr RPAREN .)
    RETURN          reduce using rule 25 (term -> LPAREN expr RPAREN .)
    PASS            reduce using rule 25 (term -> LPAREN expr RPAREN .)
    $end            reduce using rule 25 (term -> LPAREN expr RPAREN .)
    DEDENT          reduce using rule 25 (term -> LPAREN expr RPAREN .)
    COMMA           reduce using rule 25 (term -> LPAREN expr RPAREN .)
    RPAREN          reduce using rule 25 (term -> LPAREN expr RPAREN .)


state 49

    (36) block -> NEWLINE INDENT . stmt_list DEDENT
    (2) stmt_list -> . stmt stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . CLASS ID COLON block
    (5) stmt -> . DEF method_name LPAREN param_list RPAREN COLON block
    (6) stmt -> . ID attr_chain id_stmt_tail
    (7) stmt -> . RETURN expr
    (8) stmt -> . RETURN
    (9) stmt -> . PASS

    CLASS           shift and go to state 4
    DEF             shift and go to state 6
    ID              shift and go to state 5
    RETURN          shift and go to state 7
    PASS            shift and go to state 8

    stmt_list                      shift and go to state 55
    stmt                           shift and go to state 3

state 50

    (32) attr_chain -> LPAREN arg_list RPAREN attr_chain .

    EQUALS          reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    CLASS           reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    DEF             reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    ID              reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    RETURN          reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    PASS            reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    $end            reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    DEDENT          reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    PLUS            reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    MINUS           reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    MUL             reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    DIV             reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    COMMA           reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)
    RPAREN          reduce using rule 32 (attr_chain -> LPAREN arg_list RPAREN attr_chain .)


state 51

    (34) arg_list -> expr COMMA arg_list .

    RPAREN          reduce using rule 34 (arg_list -> expr COMMA arg_list .)


state 52

    (5) stmt -> DEF method_name LPAREN param_list RPAREN . COLON block

    COLON           shift and go to state 56


state 53

    (16) param_list -> SELF COMMA . params
    (18) params -> . ID COMMA params
    (19) params -> . ID

    ID              shift and go to state 46

    params                         shift and go to state 57

state 54

    (18) params -> ID COMMA . params
    (18) params -> . ID COMMA params
    (19) params -> . ID

    ID              shift and go to state 46

    params                         shift and go to state 58

state 55

    (36) block -> NEWLINE INDENT stmt_list . DEDENT

    DEDENT          shift and go to state 59


state 56

    (5) stmt -> DEF method_name LPAREN param_list RPAREN COLON . block
    (36) block -> . NEWLINE INDENT stmt_list DEDENT

    NEWLINE         shift and go to state 38

    block                          shift and go to state 60

state 57

    (16) param_list -> SELF COMMA params .

    RPAREN          reduce using rule 16 (param_list -> SELF COMMA params .)


state 58

    (18) params -> ID COMMA params .

    RPAREN          reduce using rule 18 (params -> ID COMMA params .)


state 59

    (36) block -> NEWLINE INDENT stmt_list DEDENT .

    CLASS           reduce using rule 36 (block -> NEWLINE INDENT stmt_list DEDENT .)
    DEF             reduce using rule 36 (block -> NEWLINE INDENT stmt_list DEDENT .)
    ID              reduce using rule 36 (block -> NEWLINE INDENT stmt_list DEDENT .)
    RETURN          reduce using rule 36 (block -> NEWLINE INDENT stmt_list DEDENT .)
    PASS            reduce using rule 36 (block -> NEWLINE INDENT stmt_list DEDENT .)
    $end            reduce using rule 36 (block -> NEWLINE INDENT stmt_list DEDENT .)
    DEDENT          reduce using rule 36 (block -> NEWLINE INDENT stmt_list DEDENT .)


state 60

    (5) stmt -> DEF method_name LPAREN param_list RPAREN COLON block .
